# magnet-regex

magnet-regex/: grammar.md  grammar_precedence_demo.excalidraw  pyproject.toml
magnet-regex/src/magnet_regex/: __init__.py  ast_node.py  lexer.py  matcher.py  parser.py  test_lexer.py  test_tokeniser.py
